# pptx-calendar-generator

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
